--- a/src/app/modules/layout/menu/menu.component.html
+++ b/src/app/modules/layout/menu/menu.component.html
@@ -1,6 +1,6 @@
 
 <mat-toolbar color="primary">
-  <button mat-icon-button [routerLink]="['arabictoromanconverter']">
+  <button mat-icon-button [routerLink]="['numberconverter']">
     <mat-icon class="menu-icon">123</mat-icon>
   </button>
   <button mat-icon-button [routerLink]="['playgameoflife']">
@@ -8,5 +8,14 @@
   </button>
   <button mat-icon-button [routerLink]="['restaurant']">
     <mat-icon>restaurant</mat-icon>
+  </button>
+  <button mat-icon-button [routerLink]="['listcustomers']">
+    <mat-icon>group</mat-icon>
+  </button>
+  <button mat-icon-button [routerLink]="['listproducts']">
+    <mat-icon>lunch_dining</mat-icon>
+  </button>
+  <button mat-icon-button [routerLink]="['listorders']">
+    <mat-icon>shopping_cart</mat-icon>
   </button>
 </mat-toolbar>
