Adicionando conta individualizada

--- a/src/app/modules/game-of-life/play-game/play-game.component.html
+++ b/src/app/modules/game-of-life/play-game/play-game.component.html
@@ -1,4 +1,6 @@
-<main class="d-grid flex-row gap-5 justify-content-center align-content-center m-5">
+<main class="d-grid flex-row gap-4 justify-content-center align-content-center m-5">
+
+  <h1 class="text-center">Jogo da Vida!</h1>
 
   <section class="d-flex justify-content-between">
     <button mat-raised-button color="primary" (click)="nextGeneration()">Next Generation</button>
