--- a/src/app/modules/product/list-product/list-products.component.html
+++ b/src/app/modules/product/list-product/list-products.component.html
@@ -4,6 +4,8 @@
   </button>
 </mat-card>
 
+<h1 class="text-center m-2">Listar Produtos</h1>
+
 <div class="container">
   <mat-card>
     <table class="table table-striped table-bordered" *ngIf="products.length > 0">
