--- a/src/app/modules/customer/list-customer/list-customers.component.html
+++ b/src/app/modules/customer/list-customer/list-customers.component.html
@@ -4,6 +4,8 @@
   </button>
 </mat-card>
 
+<h1 class="text-center m-2">Listagem de clientes</h1>
+
 <div class="container">
   <mat-card>
     <table class="table table-striped table-bordered" *ngIf="customers.length > 0">
@@ -14,7 +16,11 @@
       </thead>
       <tbody>
       <tr *ngFor="let customer of customers">
-        <td>{{customer.name}}</td>
+        <td><span class="m-2">{{customer.name}}</span>
+          <button mat-raised-button color="primary" [routerLink]="'/listcustomers/'+customer.name+'/createorder'">
+            Fazer pedido
+          </button>
+        </td>
       </tr>
       </tbody>
     </table>
