--- a/src/app/modules/order/list-order/list-order.component.html
+++ b/src/app/modules/order/list-order/list-order.component.html
@@ -4,17 +4,29 @@
   </button>
 </mat-card>
 
+<h1 class="text-center m-2"> Lista de pedidos </h1>
+
 <div class="container">
   <mat-card>
     <table class="table table-striped table-bordered" *ngIf="customers.length > 0">
       <thead class="table-header">
       <tr>
         <th>Clientes</th>
+        <th>Pedidos</th>
+        <th>Total Devido</th>
       </tr>
       </thead>
       <tbody>
       <tr *ngFor="let customer of customers">
         <td>{{customer.name}}</td>
+        <td>
+          <ul>
+            <li *ngFor="let product of customer.products">{{product.name}}</li>
+          </ul>
+        </td>
+        <td>
+          R$ {{getBill(customer)}}
+        </td>
       </tr>
       </tbody>
     </table>
